[gd_scene load_steps=9 format=3 uid="uid://cuoady76fkaqc"]

[ext_resource type="Script" path="res://Scripts/Player.gd" id="1_ppj3t"]
[ext_resource type="Script" path="res://Scripts/PlayerInput.gd" id="2_bl1jr"]
[ext_resource type="Texture2D" uid="uid://3prxrypo122n" path="res://Sprites/Ships/ship_0001.png" id="3_2p0yb"]
[ext_resource type="Texture2D" uid="uid://xrlb6bf0c1fi" path="res://Sprites/Tiles/tile_0005.png" id="4_4fqk8"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_wolpe"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:player_name")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath(".:player_id")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath(".:rotation")
properties/3/spawn = true
properties/3/replication_mode = 1
properties/4/path = NodePath(".:cur_weapon_heat")
properties/4/spawn = true
properties/4/replication_mode = 1
properties/5/path = NodePath(".:max_weapon_heat")
properties/5/spawn = true
properties/5/replication_mode = 1
properties/6/path = NodePath(".:score")
properties/6/spawn = true
properties/6/replication_mode = 1

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_615bg"]
properties/0/path = NodePath("InputSynchronizer:throttle_input")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath("InputSynchronizer:turn_input")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath("InputSynchronizer:shoot_input")
properties/2/spawn = true
properties/2/replication_mode = 1

[sub_resource type="CircleShape2D" id="CircleShape2D_cct4e"]

[sub_resource type="Curve" id="Curve_ieq50"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.988764, 1), 0.0, 0.0, 0, 0]
point_count = 2

[node name="Player" type="CharacterBody2D" groups=["Player"]]
collision_mask = 0
script = ExtResource("1_ppj3t")

[node name="PlayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_wolpe")

[node name="InputSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_615bg")
script = ExtResource("2_bl1jr")

[node name="Sprite" type="Sprite2D" parent="."]
z_index = 3
texture = ExtResource("3_2p0yb")

[node name="Shadow" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 0.176471)
z_index = 2
position = Vector2(0, 15)
texture = ExtResource("3_2p0yb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_cct4e")

[node name="Muzzle" type="Node2D" parent="."]
position = Vector2(0, -15)

[node name="RespawnTimer" type="Timer" parent="."]
one_shot = true

[node name="AudioPlayer" type="AudioStreamPlayer" parent="."]

[node name="HitParticle" type="CPUParticles2D" parent="."]
z_index = 3
emitting = false
amount = 1
lifetime = 0.2
one_shot = true
texture = ExtResource("4_4fqk8")
emission_shape = 1
emission_sphere_radius = 8.0
gravity = Vector2(0, 0)
angle_min = -594.1
angle_max = 412.9
scale_amount_min = 1.5
scale_amount_max = 2.0
scale_amount_curve = SubResource("Curve_ieq50")

[connection signal="timeout" from="RespawnTimer" to="." method="respawn"]
